--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -58,36 +58,33 @@
         text="Пошук"
         [ngClass]="theme == 'dark' ? 'btn-dark' : 'btn-light'"
       ></Button>
-      <ListView
-        [items]="booksArray"
-        class="list-group"
-        (itemTap)="bookChosen($event)"
-      >
-        <ng-template
-          let-item="item"
-          let-i="index"
-          let-odd="odd"
-          let-even="even"
-        >
-          <!-- The item template can only have a single root view container (e.g. GridLayout, StackLayout, etc.)-->
-          <GridLayout
-            columns="*, auto, *"
-            rows="auto, auto, *"
-            class="list-group-item"
-          >
-            <Label
-              class="title"
-              row="0"
-              col="0"
-              colSpan="3"
-              [text]="item.title"
-            ></Label>
-            <Label class="field" row="1" col="0" [text]="item.field"></Label>
-            <Label class="year" row="1" col="1" [text]="item.year"></Label>
-            <Label class="author" row="1" col="2" [text]="item.author"></Label>
-          </GridLayout>
-        </ng-template>
-      </ListView>
     </FlexboxLayout>
   </ScrollView>
+  <ListView
+    [items]="booksArray"
+    class="list-group"
+    (itemTap)="bookChosen($event)"
+  >
+    <ng-template let-item="item" let-i="index" let-odd="odd" let-even="even">
+      <!-- The item template can only have a single root view container (e.g. GridLayout, StackLayout, etc.)-->
+      <GridLayout
+        columns="*, auto, *"
+        rows="auto, auto, *"
+        class="list-group-item"
+        [ngClass]="theme == 'dark' ? 'dark-group' : 'light-group'"
+      >
+        <Label
+          class="title"
+          [ngClass]="theme == 'dark' ? 'title-dark' : 'title-light'"
+          row="0"
+          col="0"
+          colSpan="3"
+          [text]="item.title"
+        ></Label>
+        <Label class="field" [ngClass]="theme == 'dark' ? 'text-dark' : 'text-light'" row="1" col="0" [text]="item.field"></Label>
+        <Label class="year" [ngClass]="theme == 'dark' ? 'text-dark' : 'text-light'" row="1" col="1" [text]="item.year"></Label>
+        <Label class="author" [ngClass]="theme == 'dark' ? 'text-dark' : 'text-light'" row="1" col="2" [text]="item.author"></Label>
+      </GridLayout>
+    </ng-template>
+  </ListView>
 </FlexboxLayout>
