--- a/src/app/book/book.component.scss
+++ b/src/app/book/book.component.scss
@@ -1,7 +1,18 @@
 * {
   color: #000;
-  --dark-bg-color: #1c3334;
-  --light-bg-color: #dbf8c3;
+  --midnight-blue: #1e1f26;
+  --indigo-ink: #283655;
+  --blueberry: #4d648d;
+  --violet-blue: #d0e1f9;
+
+  --white: #fff;
+  --black: #000;
+
+  --ghost-white: #f6f8fa;
+  --lavender-gray: #c3ccd3;
+  --cadet-grey: #8EA6B2;
+  --deep-space-sparkle: #47646f;
+  --gunmetal: #1E383C;
 }
 
 .page {
@@ -16,69 +27,51 @@
 }
 
 .action-bar-dark {
-  background-color: var(--light-bg-color);
+  background-color: var(--indigo-ink);
   .action-bar-title {
-    color: var(--dark-bg-color);
-  }
-
-  .fas {
-    color: var(--dark-bg-color);
+    color: var(--ghost-white);
   }
 }
 
 .action-bar-light {
-  background-color: var(--dark-bg-color);
+  background-color: var(--deep-space-sparkle);
   .action-bar-title {
-    color: var(--light-bg-color);
-  }
-
-  .fas {
-    color: var(--light-bg-color);
+    color: var(--ghost-white);
   }
 }
 
 .dark-page {
-  background-color: var(--dark-bg-color);
+  background-color: var(--midnight-blue);
 }
 
 .light-page {
-  background-color: var(--light-bg-color);
+  background-color: var(--lavender-gray);
 }
 
 .title-light {
-  color: var(--dark-bg-color);
+  color: var(--gunmetal);
 }
 
 .title-dark {
-  color: var(--light-bg-color);
+  color: var(--blueberry);
 }
 
 .text-light {
-  color: #000;
+  color: var(--black);
 }
 
 .text-dark {
-  color: #fff;
-}
-
-.input-light {
-  border-bottom-color: var(--dark-bg-color);
-  placeholder-color: #000;
-}
-
-.input-dark {
-  border-bottom-color: var(--light-bg-color);
-  placeholder-color: #fff;
+  color: var(--violet-blue);
 }
 
 .btn-light {
-  background-color: var(--dark-bg-color);
-  color: var(--light-bg-color);
+  background-color: var(--ghost-white);
+  color: var(--gunmetal);
 }
 
 .btn-dark {
-  background-color: var(--light-bg-color);
-  color: var(--dark-bg-color);
+  background-color: var(--blueberry);
+  color: var(--white);
 }
 
 .title-small {
@@ -136,9 +129,4 @@
   font-weight: bold;
   border-radius: 20%;
   font-size: 20;
-  color: #fff;
-}
-
-.btn-primary {
-  background-color: #54aaab;
 }
