--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,7 +1,18 @@
 * {
   color: #000;
-  --dark-bg-color: #1c3334;
-  --light-bg-color: #dbf8c3;
+  --midnight-blue: #1e1f26;
+  --indigo-ink: #283655;
+  --blueberry: #4d648d;
+  --violet-blue: #d0e1f9;
+
+  --white: #fff;
+  --black: #000;
+
+  --ghost-white: #f6f8fa;
+  --lavender-gray: #c3ccd3;
+  --cadet-grey: #8EA6B2;
+  --deep-space-sparkle: #47646f;
+  --gunmetal: #1E383C;
 }
 
 .page {
@@ -16,33 +27,33 @@
 }
 
 .action-bar-dark {
-  background-color: var(--light-bg-color);
+  background-color: var(--indigo-ink);
   .action-bar-title {
-    color: var(--dark-bg-color);
+    color: var(--ghost-white);
   }
 
   .fas {
-    color: var(--dark-bg-color);
+    color: var(--ghost-white);
   }
 }
 
 .action-bar-light {
-  background-color: var(--dark-bg-color);
+  background-color: var(--deep-space-sparkle);
   .action-bar-title {
-    color: var(--light-bg-color);
+    color: var(--ghost-white);
   }
 
   .fas {
-    color: var(--light-bg-color);
+    color: var(--ghost-white);
   }
 }
 
 .dark-page {
-  background-color: var(--dark-bg-color);
+  background-color: var(--midnight-blue);
 }
 
 .light-page {
-  background-color: var(--light-bg-color);
+  background-color: var(--lavender-gray);
 }
 
 .title {
@@ -83,8 +94,26 @@
 }
 
 .list-group-item {
-  background-color: #fff;
   border-radius: 20px;
-  border-color: black;
   border-width: 3;
+}
+
+.dark-group {
+  background-color: var(--blueberry);
+  .text-dark {
+    color: var(--violet-blue);
+  }
+  .title-dark {
+    color: var(--white);
+  }
+}
+
+.light-group {
+  background-color: var(--ghost-white);
+  .text-light {
+    color: var(--deep-space-sparkle);
+  }
+  .title-light {
+    color: var(--gunmetal);
+  }
 }
