--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -14,7 +14,7 @@
   class="page"
   [ngClass]="theme == 'dark' ? 'dark-page' : 'light-page'"
 >
-  <ListView [items]="myArray">
+  <ListView [items]="dataArray">
     <ng-template let-item="item">
       <!-- The item template can only have a single root view container (e.g. GridLayout, StackLayout, etc.)-->
       <GridLayout
